--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,12 +99,14 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background: rgb(25,25,112);
+		background-image: linear-gradient(to top, #191970 0%, #336699 100%) !important;
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #191970 15%, #336699 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #191970 15%, #336699 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #191970 15%, #336699 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #191970 15%, #191970 85%);
 	}
+	
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
@@ -3411,7 +3413,8 @@ input, select, textarea {
 			#main input[type="button"].primary,
 			#main button.primary,
 			#main .button.primary {
-				background-color: #8cc9f0;
+				background-color: #4070a0
+				;
 				color: #ffffff !important;
 				box-shadow: none;
 			}
@@ -3421,7 +3424,7 @@ input, select, textarea {
 				#main input[type="button"].primary:hover,
 				#main button.primary:hover,
 				#main .button.primary:hover {
-					background-color: #9acff2;
+					background-color: #191970;
 				}
 
 				#main input[type="submit"].primary:active,
